--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div class="inputeBox">
+    <div class="inputBox">
       <h2>Random Password Generator</h2>
       <input
         type="text"
@@ -19,5 +19,6 @@
       />
       <div id="btn">Generate Password</div>
     </div>
+    <script src="style.js"></script>
   </body>
 </html>
