added javascript to Html to generate random passwords

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         id="password"
         readonly=""
       />
-      <div id="btn">Generate Password</div>
+      <div id="btn" onclick="getPassword();">Generate Password</div>
     </div>
     <script src="style.js"></script>
   </body>
